add gcviewer tool